agrego comentario en el html de datos

--- a/src/app/components/datos-personales/datos-personales.component.html
+++ b/src/app/components/datos-personales/datos-personales.component.html
@@ -3,6 +3,7 @@
   class="divider"
   style="background-image: url('../../assets/images/hero.jpeg')"
 >
+<!-- Única imagen que llamo desde el Front ya que es parte de la estructura de la section y si por alguna razón el backend no se carga correctamente, esta sección se rompe. -->
 <div class="container">
   <div class="p-0 bd-highlight">
     <div class="d-flex justify-content-end">
