configuro front con Firebase

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -166,10 +166,15 @@
             </div>
             <div class="col-md-12">
               <input type="hidden" name="_captcha" value="false" />
-              <input
+              <!-- <input
                 type="hidden"
                 name="_next"
                 value="http://localhost:4200/messageSent"
+              /> -->
+              <input
+                type="hidden"
+                name="_next"
+                value="https://alfonsinadvp.web.app/messageSent"
               />
             </div>
             <div class="col-md-12">
