agregué función en componente header para repliegue automático de menú de navbar

--- a/src/app/components/datos-personales/datos-personales.component.html
+++ b/src/app/components/datos-personales/datos-personales.component.html
@@ -1,7 +1,7 @@
 <section
   id="home"
   class="divider"
-  style="background-image: url('../../assets/images/hero.jpeg')"
+  style="background-image: url('assets/images/hero.jpeg')"
 >
 <!-- Única imagen que llamo desde el Front ya que es parte de la estructura de la section y si por alguna razón el backend no se carga correctamente, esta sección se rompe. -->
 <div class="container">
@@ -74,3 +74,4 @@
     </div>
   </div>
 </section>
+
