--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="navbar navbar-expand-lg sticky-top" (click)="menuRollback()">
   <div class="container-fluid">
     <img src="{{ persona.logo }}" class="logo-brand" alt="logo" />
     <button
@@ -11,6 +11,7 @@
       aria-label="Toggle navigation"
     >
       <ion-icon
+        id="closeNav"
         style="background: none; border-radius: 0; color: #eb671b"
         name="grid-outline"
       ></ion-icon>
