--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -11,9 +11,9 @@
 .nav-link:hover{ color: #eb3a1b;}
 
 .navbar-toggler { font-size: 40px; }
-/* .navbar-toggler:focus { outline: none; }
+/* .navbar-toggler:focus { outline: none; } */
 
 @media (max-width: 576px) { 
-    .navbar { font-size: 15px; }
+    .navbar { font-size: 18px; }
     .btn { font-size: 15px !important;}
-} */
+}
