agrego opción de volver a componentes de edición y ajusto detalles de estilos

--- a/src/app/components/about/edit-about.component.html
+++ b/src/app/components/about/edit-about.component.html
@@ -7,9 +7,13 @@
                         <label for="about"><h1><b>Breve descripción acerca de sí mismo</b></h1></label>
                         <textarea cols="50" rows="5" type="text" class="form-control" id="about" name="about" [(ngModel)]="about.about" required></textarea>
                     </div>
-                    <button class="btn btn-success">
-                        Modificar descripción
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Modificar descripción
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div>  
                 </form>
             </div>
         </div>
