--- a/src/app/components/contact/new-contact.component.html
+++ b/src/app/components/contact/new-contact.component.html
@@ -15,9 +15,13 @@
                         <label for="otroMedio"><b>Describa otro medio de comunicación (opcional)</b></label>
                         <input type="text" class="form-control" id="otroMedio" name="otroMedio" [(ngModel)]="otroMedio" >
                     </div>
-                    <button class="btn btn-success">
-                        Agregar datos de Contacto
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Agregar datos de Contacto
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div>  
                 </form>
             </div>
         </div>
