--- a/src/app/components/datos-personales/new-datos.component.html
+++ b/src/app/components/datos-personales/new-datos.component.html
@@ -23,9 +23,13 @@
                         <label for="cv"><b>URL del archivo CV</b></label>
                         <input type="text" class="form-control" id="cv" name="cv" [(ngModel)]="cv" required>
                     </div>
-                    <button class="btn btn-success">
-                        Agregar Datos
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Agregar Datos
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div>  
                 </form>
             </div>
         </div>
