--- a/src/app/components/experience/edit-experiencia.component.html
+++ b/src/app/components/experience/edit-experiencia.component.html
@@ -19,9 +19,13 @@
                         <label for="periodoAniosExp"><b>Periodo trabajado (AAAA-AAAA)</b></label>
                         <input type="text" class="form-control" id="periodoAniosExp" name="periodoAniosExp" [(ngModel)]="expLab.periodoAniosExp" required>
                     </div>
-                    <button class="btn btn-success">
-                        Modificar experiencia laboral
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Modificar experiencia laboral
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div> 
                 </form>
             </div>
         </div>
