--- a/src/app/components/projects/new-project.component.html
+++ b/src/app/components/projects/new-project.component.html
@@ -15,9 +15,13 @@
                         <label for="webProy"><b>URL del Proyecto</b></label>
                         <input type="text" class="form-control" id="webProy" name="webProy" [(ngModel)]="webProy" required>
                     </div>
-                    <button class="btn btn-success">
-                        Agregar Proyecto
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Agregar Proyecto
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div>  
                 </form>
             </div>
         </div>
