--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -3,7 +3,7 @@
     <div class="content-center width">
       <h2>Soft & Hard skills</h2>
       <div class="container">
-        <div class="mt-4 mb-4 bd-highlight">
+        <div class="mt-4 mb-3 bd-highlight">
           <div class="d-flex justify-content-end">
             <div class="p-1 bd-highlight">
               <button
@@ -24,7 +24,7 @@
       <ul class="list-inline">
         <li class="list-inline-item" *ngFor="let Skills of skills">
           <div class="container">
-            <div class="d-flex justify-content-end me-3">
+            <div class="d-flex justify-content-end">
               <div class="p-1 bd-highlight">
                 <button
                   type="button"
@@ -52,7 +52,7 @@
                 </button>
               </div>
             </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center mb-3">
               
               <div>
                   <h3>{{ Skills.nameSkill }}</h3>
