--- a/src/app/components/studies/editstudy.component.html
+++ b/src/app/components/studies/editstudy.component.html
@@ -46,7 +46,13 @@
                             required
                         />
                     </div>
-                    <button class="btn btn-success">Modificar educación</button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Modificar educación
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div> 
                 </form>
             </div>
         </div>
