--- a/src/app/components/datos-personales/datos-personales.component.html
+++ b/src/app/components/datos-personales/datos-personales.component.html
@@ -1,28 +1,28 @@
 <section
   id="home"
   class="divider"
-  style="background-image: url('assets/images/hero.jpeg')"
+  style="background-image: url('assets/images/home.jpeg')"
 >
-<!-- Única imagen que llamo desde el Front ya que es parte de la estructura de la section y si por alguna razón el backend no se carga correctamente, esta sección se rompe. -->
-<div class="container">
-  <div class="p-0 bd-highlight">
-    <div class="d-flex justify-content-end">
-      <div class="p-1 bd-highlight">
-        <button
-          type="button"
-          class="edit-buttons"
-          routerLink="/nuevosdatos"
-          *ngIf="isLogged && datos.length == 0"
-        >
-          <ion-icon
-            style="background: none; border-radius: 0"
-            name="add-outline"
-          ></ion-icon>
-        </button>
+  <!-- Única imagen que llamo desde el Front ya que es parte de la estructura de la section y si por alguna razón el backend no se carga correctamente, esta sección se rompe. -->
+  <div class="container">
+    <div class="p-0 bd-highlight">
+      <div class="d-flex justify-content-end">
+        <div class="p-1 bd-highlight">
+          <button
+            type="button"
+            class="edit-buttons"
+            routerLink="/nuevosdatos"
+            *ngIf="isLogged && datos.length == 0"
+          >
+            <ion-icon
+              style="background: none; border-radius: 0"
+              name="add-outline"
+            ></ion-icon>
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
   <div class="container" *ngFor="let DatosPersonales of datos">
     <div class="d-flex justify-content-end">
       <div class="p-1 bd-highlight">
@@ -74,4 +74,3 @@
     </div>
   </div>
 </section>
-
