--- a/src/app/components/skills/new-skills.component.html
+++ b/src/app/components/skills/new-skills.component.html
@@ -4,7 +4,7 @@
             <div>
                 <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                     <div class="form-group">
-                        <label for="nameSkill"><b>Nombre Skill</b></label>
+                        <label for="nameSkill"><b>Nombre de la habilidad</b></label>
                         <input type="text" class="form-control" id="nameSkill" name="nameSkill" [(ngModel)]="nameSkill" required>
                     </div>
                     <div class="form-group">
@@ -12,12 +12,16 @@
                         <input type="number" class="form-control" id="progress" name="progress" [(ngModel)]="progress" required>
                     </div>
                     <div class="form-group">
-                        <label for="imgSkill"><b>URL de la imagen de la skill (opcional)</b></label>
+                        <label for="imgSkill"><b>URL de la imagen de la habilidad (opcional)</b></label>
                         <input type="text" class="form-control" id="imgSkill" name="imgSkill" [(ngModel)]="imgSkill">
                     </div>
-                    <button class="btn btn-success">
-                        Editar skills
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Agregar habilidad
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div>  
                 </form>
             </div>
         </div>
