--- a/src/app/components/studies/newstudy.component.html
+++ b/src/app/components/studies/newstudy.component.html
@@ -19,9 +19,13 @@
                         <label for="periodoAniosE"><b>Periodo de estudio (AAAA-AAAA)</b></label>
                         <input type="text" class="form-control" id="periodoAniosE" name="periodoAniosE" [(ngModel)]="periodoAniosE" required>
                     </div>
-                    <button class="btn btn-success">
-                        Agregar educación
-                    </button>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-success">
+                            Agregar educación
+                        </button>
+                        <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
+                        <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
+                    </div>  
                 </form>
             </div>
         </div>
