--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,22 +1,29 @@
-<nav class="navbar navbar-expand-lg sticky-top" (click)="menuRollback()">
+<nav class="navbar navbar-expand-xxl sticky-top" (click)="menuRollback()">
   <div class="container-fluid">
     <img src="{{ persona.logo }}" class="logo-brand" alt="logo" />
+    <div class="ms-3">
+      <tr>
+        <p>Argentina Programa</p>
+      </tr>
+      <tr>
+        <p>#YoProgramo</p>
+      </tr>
+    </div>
     <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#MenuNavegacion"
-      aria-controls="MenuNavegacion"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#MenuNavegacion"
+        aria-controls="MenuNavegacion"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
     >
-      <ion-icon
+        <ion-icon
         id="closeNav"
         style="background: none; border-radius: 0; color: #eb671b"
         name="grid-outline"
-      ></ion-icon>
+        ></ion-icon>
     </button>
-
     <div class="collapse navbar-collapse" id="MenuNavegacion">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item" style="padding: 0px 20px">
