--- a/src/app/components/experience/edit-experiencia.component.html
+++ b/src/app/components/experience/edit-experiencia.component.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
-                            Modificar experiencia laboral
+                            Modificar exp. laboral
                         </button>
                         <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
                         <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
