--- a/src/app/components/about/edit-about.component.html
+++ b/src/app/components/about/edit-about.component.html
@@ -9,7 +9,7 @@
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
-                            Modificar descripción
+                            Guardar cambios
                         </button>
                         <!-- <a href="http://localhost:4200" class="btn btn-success">Volver</a> -->
                         <a href="https://alfonsinadvp.web.app" class="btn btn-success">Volver</a>
