--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,61 +1,81 @@
 <section id="experience" class="divider">
-    <div class="container-fluid">
-        <div class="content-center">
-            <h2>Work Experience</h2>
+  <div class="container-fluid">
+    <div class="content-center">
+      <h2>Work Experience</h2>
 
-            <div class="p-0 bd-highlight">
-                <div class="d-flex justify-content-end">
-                  <div class="p-1 bd-highlight">
-                    <button type="button" class="edit-buttons" routerLink="/nuevaexp" *ngIf="isLogged">
-                      <ion-icon
-                        style="background: none; border-radius: 0"
-                        name="add-outline"
-                      ></ion-icon>
-                    </button>
-                  </div>
-                </div>
-              </div>
-      
-              <div class="d-flex justify-content-start" *ngFor="let Experiencia of expe">
-                <div class="p-1 bd-highlight">
-                  <div class="p-0 bd-highlight">
-                    <br>
-                    <img
-                      src="{{Experiencia.logoExp}}"
-                      class="logo-brand"
-                      alt="logo"
-                    />
-                  </div>
-                </div>
-                <div class="p-1 bd-highlight">
-                  <h3><b>{{Experiencia.nombreE}}</b></h3>
-                  <h4><time>{{Experiencia.periodoAniosExp}}</time></h4>
-                  <h3><i>{{Experiencia.descripcionE}}</i></h3>
-                </div>
-        
-                <div class="p-1 bd-highlight" *ngIf="isLogged">
-                  <div class="d-flex justify-content-end">
-                    <div class="p-1 bd-highlight">
-                      <button type="button" class="edit-buttons" routerLink="/editexp/{{Experiencia.id}}">
-                        <ion-icon
-                          style="background: none; border-radius: 0"
-                          name="pencil-sharp"
-                        ></ion-icon>
-                      </button>
-                    </div>
-                    <div class="p-1 bd-highlight">
-                      <button type="button" class="edit-buttons" (click)="delete(Experiencia.id)">
-                        <ion-icon
-                          style="background: none; border-radius: 0"
-                          name="trash-outline"
-                        ></ion-icon>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-            </div>
-        
+      <div class="p-0 mb-3 bd-highlight">
+        <div class="d-flex justify-content-end">
+          <div class="p-1 bd-highlight">
+            <button
+              type="button"
+              class="edit-buttons"
+              routerLink="/nuevaexp"
+              *ngIf="isLogged"
+            >
+              <ion-icon
+                style="background: none; border-radius: 0"
+                name="add-outline"
+              ></ion-icon>
+            </button>
+          </div>
         </div>
-    </div>
-</section>
+      </div>
 
+      <div class="row" *ngFor="let Experiencia of expe">
+        <div class="p-0 bd-highlight" *ngIf="isLogged">
+          <div class="d-flex justify-content-end">
+            <div class="p-1 bd-highlight">
+              <button
+                type="button"
+                class="edit-buttons"
+                routerLink="/editexp/{{ Experiencia.id }}"
+              >
+                <ion-icon
+                  style="background: none; border-radius: 0"
+                  name="pencil-sharp"
+                ></ion-icon>
+              </button>
+            </div>
+            <div class="p-1 me-3 bd-highlight">
+              <button
+                type="button"
+                class="edit-buttons"
+                (click)="delete(Experiencia.id)"
+              >
+                <ion-icon
+                  style="background: none; border-radius: 0"
+                  name="trash-outline"
+                ></ion-icon>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-4">
+          <div class="p-0 bd-highlight">
+            <img
+              src="{{ Experiencia.logoExp }}"
+              class="logo-brand"
+              alt="logo"
+            />
+          </div>
+        </div>
+        
+        <div class="col-md-4 mb-5">
+          <div class="p-1 bd-highlight">
+            <h3>
+              <b>{{ Experiencia.nombreE }}</b>
+            </h3>
+            <h4>
+              <time>{{ Experiencia.periodoAniosExp }}</time>
+            </h4>
+            <h3>
+              <i>{{ Experiencia.descripcionE }}</i>
+            </h3>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</section>
