agrego opción de volver hacia atrás en el componente login

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,9 @@
-.logo-modal{ 
+.logo{ 
     min-width: 80px;
     max-width: 80px;
+}
+
+@media (max-width: 576px) { 
+    .btn { font-size: 11px; line-height: normal; }
+    h1 { font-size: 20px; line-height: normal; }
 }
