agrego mayor descripción a los títulos de los inputs en componentes de edición

--- a/src/app/components/datos-personales/edit-datos.component.html
+++ b/src/app/components/datos-personales/edit-datos.component.html
@@ -8,7 +8,7 @@
                         <input type="text" class="form-control" id="nombreCompleto" name="nombreCompleto" [(ngModel)]="datos.nombreCompleto" required>
                     </div>
                     <div class="form-group">
-                        <label for="imgPerfil"><b>URL de la imagen de perfil (opcional)</b></label>
+                        <label for="imgPerfil"><b>URL de la imagen de perfil (opcional) -> assets/images/<i>nombreImg</i></b></label>
                         <input type="text" class="form-control" id="imgPerfil" name="imgPerfil" [(ngModel)]="datos.imgPerfil">
                     </div>
                     <div class="form-group">
@@ -20,7 +20,7 @@
                         <input type="text" class="form-control" id="ubicacion" name="ubicacion" [(ngModel)]="datos.ubicacion" required>
                     </div>
                     <div class="form-group">
-                        <label for="cv"><b>URL del archivo CV</b></label>
+                        <label for="cv"><b>URL del archivo CV -> assets/<i>nombreArchivo</i></b></label>
                         <input type="text" class="form-control" id="cv" name="cv" [(ngModel)]="datos.cv" required>
                     </div>
                     <div class="d-flex justify-content-between">
