--- a/src/app/components/skills/new-skills.component.html
+++ b/src/app/components/skills/new-skills.component.html
@@ -8,11 +8,11 @@
                         <input type="text" class="form-control" id="nameSkill" name="nameSkill" [(ngModel)]="nameSkill" required>
                     </div>
                     <div class="form-group">
-                        <label for="progress"><b>Progreso</b></label>
+                        <label for="progress"><b>Progreso (Indicar un número entre el 0 y el 100)</b></label>
                         <input type="number" class="form-control" id="progress" name="progress" [(ngModel)]="progress" required>
                     </div>
                     <div class="form-group">
-                        <label for="imgSkill"><b>URL de la imagen de la habilidad (opcional)</b></label>
+                        <label for="imgSkill"><b>URL de la imagen de la habilidad (opcional) -> assets/images/<i>nombreImg</i></b></label>
                         <input type="text" class="form-control" id="imgSkill" name="imgSkill" [(ngModel)]="imgSkill">
                     </div>
                     <div class="d-flex justify-content-between">
