--- a/src/app/components/studies/editstudy.component.html
+++ b/src/app/components/studies/editstudy.component.html
@@ -15,7 +15,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="logoE"><b>URL del logo (opcional)</b></label>
+                        <label for="logoE"><b>URL del logo (opcional) -> assets/images/<i>nombreImg</i></b></label>
                         <input
                             type="text"
                             class="form-control"
