--- a/src/app/components/experience/new-experience.component.html
+++ b/src/app/components/experience/new-experience.component.html
@@ -8,7 +8,7 @@
                         <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                     </div>
                     <div class="form-group">
-                        <label for="logoExp"><b>URL del logo (opcional)</b></label>
+                        <label for="logoExp"><b>URL del logo (opcional) -> assets/images/<i>nombreImg</i></b></label>
                         <input type="text" class="form-control" id="logoExp" name="logoExp" [(ngModel)]="logoExp">
                     </div>
                     <div class="form-group">
