--- a/src/app/components/projects/new-project.component.html
+++ b/src/app/components/projects/new-project.component.html
@@ -12,7 +12,7 @@
                         <input type="text" class="form-control" id="descProy" name="descProy" [(ngModel)]="descProy">
                     </div>
                     <div class="form-group">
-                        <label for="webProy"><b>URL del Proyecto</b></label>
+                        <label for="webProy"><b>Sitio web del Proyecto</b></label>
                         <input type="text" class="form-control" id="webProy" name="webProy" [(ngModel)]="webProy" required>
                     </div>
                     <div class="d-flex justify-content-between">
