--- a/src/app/components/studies/newstudy.component.html
+++ b/src/app/components/studies/newstudy.component.html
@@ -8,7 +8,7 @@
                         <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                     </div>
                     <div class="form-group">
-                        <label for="logoE"><b>URL del logo (opcional)</b></label>
+                        <label for="logoE"><b>URL del logo (opcional) -> assets/images/<i>nombreImg</i></b></label>
                         <input type="text" class="form-control" id="logoE" name="logoE" [(ngModel)]="logoE">
                     </div>
                     <div class="form-group">
