corrijo tipos de input

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -158,7 +158,7 @@
             <div class="col-md-12">
               <div class="form-group">
                 <input
-                  type="text"
+                  type="tel"
                   class="form-control"
                   name="phone"
                   placeholder="Phone number (optional)"
