--- a/src/app/components/datos-personales/datos-personales.component.html
+++ b/src/app/components/datos-personales/datos-personales.component.html
@@ -57,7 +57,7 @@
       <img
         id="home-img"
         src="{{ DatosPersonales.imgPerfil }}"
-        alt="Foto perfil"
+        alt="Profile Picture"
       />
       <p id="home-p">{{ DatosPersonales.profesion }}</p>
       <p id="home-p">{{ DatosPersonales.ubicacion }}</p>
