--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -56,7 +56,7 @@
             <img
               src="{{ Experiencia.logoExp }}"
               class="logo-brand"
-              alt="logo"
+              alt="Logo"
             />
           </div>
         </div>
