--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
       <img
         src="{{ persona.logo }}"
         class="logo-brand"
-        alt="logo"
+        alt="Logo"
         style="margin-bottom: 20px"
       />
       <ul class="list-inline">
@@ -50,8 +50,9 @@
           ></a>
         </li>
       </ul>
-      <small
-        >Try, fail and try again. That is the path to success. <b>Believe in yourself </b>
+      <small> Try, fail and try again. That is the path to success.
+        <br/>
+        <b>Believe in yourself </b>
         <ion-icon
           style="
             color: #eb671b;
@@ -60,11 +61,9 @@
             border-radius: 0;
           "
           name="sparkles-outline"
-        ></ion-icon
-      ></small>
-      <br>
-      <small
-        ><b>Copyright © 2022 YAG</b>
+        ></ion-icon>
+        <br/>
+        &#169; Copyright YAG - 2022
       </small>
     </div>
   </section>
