--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-xxl sticky-top" (click)="menuRollback()">
   <div class="container-fluid">
-    <img src="{{ persona.logo }}" class="logo-brand" alt="logo" />
+    <img src="{{ persona.logo }}" class="logo-brand" alt="Logo" />
     <div class="ms-3">
       <tr>
         <p>Argentina Programa</p>
