--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <img
         src="{{ persona.logo }}"
         class="logo mx-auto d-block"
-        alt="logo"
+        alt="Logo"
       />
     </div>
     <div class="mb-3 text-center">
