--- a/src/app/components/projects/edit-project.component.html
+++ b/src/app/components/projects/edit-project.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="form-group">
                         <label for="webProy"><b>Sitio web del Proyecto</b></label>
-                        <input type="text" class="form-control" id="webProy" name="webProy" [(ngModel)]="proyectos.webProy" required>
+                        <input type="url" class="form-control" id="webProy" name="webProy" placeholder="https://sitioweb" [(ngModel)]="proyectos.webProy" required>
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
