--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -47,7 +47,7 @@
             <img
                 src="{{Educacion.logoE}}"
                 class="bg-dark-blue logo-brand"
-                alt="logo"
+                alt="Logo"
               />
           </div>
         </div>
