--- a/src/app/components/datos-personales/new-datos.component.html
+++ b/src/app/components/datos-personales/new-datos.component.html
@@ -8,8 +8,8 @@
                         <input type="text" class="form-control" id="nombreCompleto" name="nombreCompleto" [(ngModel)]="nombreCompleto" required>
                     </div>
                     <div class="form-group">
-                        <label for="imgPerfil"><b>URL de la imagen de perfil (opcional) -> assets/images/<i>nombreImg</i></b></label>
-                        <input type="text" class="form-control" id="imgPerfil" name="imgPerfil" [(ngModel)]="imgPerfil">
+                        <label for="imgPerfil"><b>Relative Path de la imagen de perfil (opcional)</b></label>
+                        <input type="text" class="form-control" id="imgPerfil" name="imgPerfil" placeholder="assets/images/nombreImg.extensión" [(ngModel)]="imgPerfil">
                     </div>
                     <div class="form-group">
                         <label for="profesion"><b>Profesión</b></label>
@@ -17,11 +17,11 @@
                     </div>
                     <div class="form-group">
                         <label for="ubicacion"><b>Ubicación</b></label>
-                        <input type="text" class="form-control" id="ubicacion" name="ubicacion" [(ngModel)]="ubicacion" required>
+                        <input type="text" class="form-control" id="ubicacion" name="ubicacion" placeholder="Localidad, Provincia, País" [(ngModel)]="ubicacion" required>
                     </div>
                     <div class="form-group">
-                        <label for="cv"><b>URL del archivo CV -> assets/<i>nombreArchivo</i></b></label>
-                        <input type="text" class="form-control" id="cv" name="cv" [(ngModel)]="cv" required>
+                        <label for="cv"><b>Relative Path del archivo CV</b></label>
+                        <input type="text" class="form-control" id="cv" name="cv" placeholder="assets/nombreArchivo.extensión" [(ngModel)]="cv" required>
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
