--- a/src/app/components/experience/new-experience.component.html
+++ b/src/app/components/experience/new-experience.component.html
@@ -8,16 +8,16 @@
                         <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                     </div>
                     <div class="form-group">
-                        <label for="logoExp"><b>URL del logo (opcional) -> assets/images/<i>nombreImg</i></b></label>
-                        <input type="text" class="form-control" id="logoExp" name="logoExp" [(ngModel)]="logoExp">
+                        <label for="logoExp"><b>Relative Path del logo (opcional)</b></label>
+                        <input type="text" class="form-control" id="logoExp" name="logoExp" placeholder="assets/images/nombreImg.extensión" [(ngModel)]="logoExp">
                     </div>
                     <div class="form-group">
                         <label for="descripcionE"><b>Nombre del Puesto</b></label>
                         <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                     </div>
                     <div class="form-group">
-                        <label for="periodoAniosExp"><b>Periodo trabajado (AAAA-AAAA)</b></label>
-                        <input type="text" class="form-control" id="periodoAniosExp" name="periodoAniosExp" [(ngModel)]="periodoAniosExp" required>
+                        <label for="periodoAniosExp"><b>Periodo trabajado</b></label>
+                        <input type="text" class="form-control" id="periodoAniosExp" name="periodoAniosExp" placeholder="(AAAA-AAAA)" [(ngModel)]="periodoAniosExp" required>
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
