--- a/src/app/components/skills/new-skills.component.html
+++ b/src/app/components/skills/new-skills.component.html
@@ -8,12 +8,12 @@
                         <input type="text" class="form-control" id="nameSkill" name="nameSkill" [(ngModel)]="nameSkill" required>
                     </div>
                     <div class="form-group">
-                        <label for="progress"><b>Progreso (Indicar un número entre el 0 y el 100)</b></label>
-                        <input type="number" class="form-control" id="progress" name="progress" [(ngModel)]="progress" required>
+                        <label for="progress"><b>Progreso</b></label>
+                        <input type="number" class="form-control" id="progress" name="progress" placeholder="Indicar un número entre el 0 y el 100" [(ngModel)]="progress" required>
                     </div>
                     <div class="form-group">
-                        <label for="imgSkill"><b>URL de la imagen de la habilidad (opcional) -> assets/images/<i>nombreImg</i></b></label>
-                        <input type="text" class="form-control" id="imgSkill" name="imgSkill" [(ngModel)]="imgSkill">
+                        <label for="imgSkill"><b>Relative Path de la imagen de la habilidad</b></label>
+                        <input type="text" class="form-control" id="imgSkill" name="imgSkill" placeholder="assets/images/nombreImg.extensión" [(ngModel)]="imgSkill" required>
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
