--- a/src/app/components/studies/newstudy.component.html
+++ b/src/app/components/studies/newstudy.component.html
@@ -8,16 +8,16 @@
                         <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                     </div>
                     <div class="form-group">
-                        <label for="logoE"><b>URL del logo (opcional) -> assets/images/<i>nombreImg</i></b></label>
-                        <input type="text" class="form-control" id="logoE" name="logoE" [(ngModel)]="logoE">
+                        <label for="logoE"><b>Relative Path del logo (opcional)</b></label>
+                        <input type="text" class="form-control" id="logoE" name="logoE" placeholder="assets/images/nombreImg.extensión" [(ngModel)]="logoE">
                     </div>
                     <div class="form-group">
                         <label for="descripcionE"><b>Título o certificación</b></label>
                         <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                     </div>
                     <div class="form-group">
-                        <label for="periodoAniosE"><b>Periodo de estudio (AAAA-AAAA)</b></label>
-                        <input type="text" class="form-control" id="periodoAniosE" name="periodoAniosE" [(ngModel)]="periodoAniosE" required>
+                        <label for="periodoAniosE"><b>Periodo de estudio</b></label>
+                        <input type="text" class="form-control" id="periodoAniosE" name="periodoAniosE" placeholder="(AAAA-AAAA)" [(ngModel)]="periodoAniosE" required>
                     </div>
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-success">
